my  assignment 2 solution

--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 	<title>Hello cousera</title>
 </head>
 <body>
-<h1>Hello Cousera, its a great day to  learn html</h1>
+<h1>Hello Cousera, its a great day to  learn html! dont u think??</h1>
 
 </body>
 </html>
